--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -83,7 +83,7 @@
 
             <div class="col-sm-10">
 
-              <input type="text" id="date" name="date" placeholder="YYYY-MM-DD" class="form-control" value="<%= @experience.date %>">
+              <input type="text" id="date" name="date" placeholder="YYYY-MM-DD" class="form-control" value="<%= @time %>">
             </div>
           </div>
 
