added restaurant columns

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,11 +70,11 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-
+          <% @experiences = Experience.all %>
           <% if current_user != nil %>
-            <li><a href="/experiences">Experiences  <span class="badge"><%= @experiences.where(:user_id => current_user.id).count %></span></a></li>
+          <li><a href="/experiences">Experiences  <span class="badge"><%= @experiences.where(:user_id => current_user.id).count %></span></a></li>
           <% else %>
-            <li><a href="/experiences">Experiences</a></li>
+          <li><a href="/experiences">Experiences</a></li>
           <% end %>
 
           <li><a href="/restaurants">Restaurants</a></li>
@@ -82,10 +82,10 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-        <% if current_user != nil %>
+          <% if current_user != nil %>
           <li><a href="/users/sign_out" data-method="delete">Sign Out</a></li>
           <li><a href="/users/edit"><%= current_user.email %></a></li>
-        <% else %>
+          <% else %>
           <li><a href="/users/sign_in">Sign In</a></li>
           <li><a href="/users/sign_up">Sign Up</a></li>
         <% end %>
