--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -51,7 +51,14 @@
               Restaurant
             </label>
             <div class="col-sm-10">
+              <%if Restaurant.count == 0 %>
+              <h4>Please add a restaurant</h4>
+              <% else %>
+
               <%= select_tag(:restaurant_id, options_from_collection_for_select(Restaurant.order("venue_name ASC"), :id, :venue_name, @restaurants.last.id), :class => "form-control") %>
+
+              <% end %>
+
             </div>
           </div>
 
