added factual and google maps apis

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -4,18 +4,27 @@
   <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Restaurant #<%= @restaurant.id %></h3>
+        <h3 class="panel-title"><%= @restaurant.venue_name %></h3>
       </div>
       <div class="panel-body">
         <div class="row">
           <div class="col-md-12">
             <dl class="dl-horizontal">
-              <dt>Venue name</dt>
-              <dd><%= @restaurant.venue_name %></dd>
+              <dt>Type</dt>
+              <dd><%= @restaurant.food_type %></dd>
+              <hr>
+              <dt>Address</dt>
+              <dd><%= @restaurant.address %> </dd>
+              <dd><%= @restaurant.city %> <%= @restaurant.state %></dd>
 
 
             </dl>
-          <!--   <div id="map-canvas"></div> -->
+
+            <%if @restaurant.address == "Unavailable" %>
+              <hr>
+              <% else %>
+            <div id="map-canvas"></div>
+            <% end %>
 
             <div class="btn-group btn-group-justified">
               <a href="/restaurants" class="btn btn-primary">
@@ -25,9 +34,6 @@
               <a href="/restaurants/<%= @restaurant.id %>/edit" class="btn btn-warning">
                 <i class="fa fa-edit"></i>
               </a>
-
-              <a href="/delete_restaurant/<%= @restaurant.id %>" class="btn btn-danger" rel="nofollow">
-                <i class="fa fa-trash-o"></i>
               </a>
             </div>
           </div>
@@ -39,7 +45,6 @@
 
 
 </div>
-
 
 
 <!-- End responsive panel example -->
