--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -10,12 +10,12 @@
 <% end %>
 
 <!-- Responsive panel example -->
-
+<hr>
 <div class="row">
   <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Edit Restaurant #<%= @restaurant.id %></h3>
+        <h3 class="panel-title">Edit Restaurant</h3>
       </div>
       <div class="panel-body">
         <form action="/update_restaurant/<%= @restaurant.id %>" method="post" class="form-horizontal">
@@ -29,6 +29,29 @@
             </label>
             <div class="col-sm-10">
               <input type="text" id="venue_name" name="venue_name" placeholder="Venue name" class="form-control" value="<%= @restaurant.venue_name %>">
+            </div>
+            </div>
+
+            <div class="form-group">
+
+            <label for="address" class="col-sm-2 control-label">
+              Type
+            </label>
+
+            <div class="col-sm-10">
+              <input type="text" id="food_type" name="food_type" placeholder="Food Type" class="form-control" value="<%= @restaurant.food_type %>">
+            </div>
+
+            </div>
+
+            <div class="form-group">
+
+            <label for="address" class="col-sm-2 control-label">
+              Address
+            </label>
+
+            <div class="col-sm-10">
+              <input type="text" id="address" name="address" placeholder="Address" class="form-control" value="<%= @restaurant.address %>">
             </div>
           </div>
 
