removed unnecessary instance variables

--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h1>
     Experiences
-    <a href="/experiences/new" class="btn btn-md btn-success">new <i class="fa fa-cutlery"></i></a>
+    <a href="/experiences/new" class="btn btn-md btn-warning" style="text-decoration:none;">new <i class="fa fa-cutlery"></i></a>
   </h1>
 </div>
 
