--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-brand">Eated</a>
+        <a href="/" class="navbar-brand" style="text-decoration:none;">Eated</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -74,12 +74,12 @@
         <ul class="nav navbar-nav">
           <% @experiences = Experience.all %>
           <% if current_user != nil %>
-          <li><a href="/experiences">Experiences  <span class="badge"><%= @experiences.where(:user_id => current_user.id).count %></span></a></li>
+          <li><a href="/experiences" style="text-decoration:none;">Experiences  <span class="badge"><%= @experiences.where(:user_id => current_user.id).count %></span></a></li>
           <% else %>
-          <li><a href="/experiences">Experiences</a></li>
+          <li><a href="/experiences" style="text-decoration:none;">Experiences</a></li>
           <% end %>
 
-          <li><a href="/restaurants">Restaurants</a></li>
+          <li><a href="/restaurants" style="text-decoration:none;">Restaurants</a></li>
 
         </ul>
 
