--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -14,6 +14,8 @@
 <!-- Responsive panel example -->
 <hr>
 
+
+
 <div class="row">
   <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
     <div class="panel panel-default">
@@ -21,21 +23,31 @@
         <h3 class="panel-title">Add Experience</h3>
       </div>
       <div class="panel-body">
+      <hr>
        <form action="/create_restaurant" method="post" class="form-horizontal">
          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
          <div class="form-group">
 
           <div class="col-sm-offset-2 col-sm-8">
             <input type="text" id="venue_name" name="venue_name" placeholder="New Restaurant" class="form-control">
+            <% if Restaurant.count == 0 %>
+            <%= select_tag :state, options_for_select(@us_states) %>
+
+
+            <% else %>
+            <%= select_tag :state, options_for_select(@us_states,Restaurant.last.state) %>
+
+
+            <% end %>
           </div>
 
 
+
+
           <div class="form-group">
-            <div class="col-sm-offset-10">
               <button class="btn btn-success">
                 Add
               </button>
-            </div>
           </div>
 
         </div>
@@ -55,6 +67,7 @@
             <h4>Please add a restaurant</h4>
 
             <% else %>
+
 
             <%= select_tag(:restaurant_id, options_from_collection_for_select(Restaurant.order("venue_name ASC"), :id, :venue_name, @restaurants.last.id), :class => "form-control") %>
 
@@ -170,5 +183,7 @@
     </div>
   </div>
 </div>
+
+
 
 <!-- End responsive panel example -->
