--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -55,6 +55,28 @@
             </div>
           </div>
 
+           <div class="form-group">
+
+            <label for="city" class="col-sm-2 control-label">
+              City
+            </label>
+
+            <div class="col-sm-10">
+              <input type="text" id="city" name="city" placeholder="City" class="form-control" value="<%= @restaurant.city %>">
+            </div>
+          </div>
+
+           <div class="form-group">
+
+            <label for="state" class="col-sm-2 control-label">
+              State
+            </label>
+
+            <div class="col-sm-10">
+              <input type="text" id="state" name="state" placeholder="State" class="form-control" value="<%= @restaurant.state %>">
+            </div>
+          </div>
+
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <button class="btn btn-warning">
