--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,11 +1,11 @@
 <!-- Responsive panel example-->
 <hr>
 <div class="row">
-  <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
+  <div class="col-md-offset-3 col-md-6">
     <div class="panel panel-default">
       <div class="panel-heading">
 
-        <a href="/restaurants/<%= @experience.restaurant_id %>"style="text-decoration:none;"><h3 class="panel-title"><%= @experience.restaurant.venue_name %></h3></a>
+        <a href="/restaurants/<%= @experience.restaurant_id %>"style="text-decoration:none;"><h3 class="panel-title text-center"><%= @experience.restaurant.venue_name %></h3></a>
       </div>
       <div class="panel-body">
         <div class="row">
