--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -17,7 +17,7 @@
   <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Edit Experience #<%= @experience.id %></h3>
+        <h3 class="panel-title text-center">Edit experience at <%= @experience.restaurant.venue_name %></h3>
       </div>
       <div class="panel-body">
         <form action="/update_experience/<%= @experience.id %>" method="post" class="form-horizontal">
