added type of food to index calendar for date

--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -38,6 +38,9 @@
           <dt>Date</dt>
           <dd><%= experience.date.strftime("%m-%d-%Y") %></dd>
 
+          <dt>Type</dt>
+          <dd><%= experience.restaurant.food_type %></dd>
+
 
         </dl>
         <div class="btn-group btn-group-justified">
