--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -62,7 +62,7 @@
           <label for="restaurant_id" class="col-sm-2 control-label">
             Restaurant
           </label>
-          <div class="col-sm-10">
+          <div class="col-sm-8">
             <%if Restaurant.count == 0 %>
             <h4>Please add a restaurant</h4>
 
@@ -102,16 +102,16 @@
             Date
           </label>
 
-          <div class="col-sm-10">
+          <div class="col-sm-8">
 
-            <input type="text" id="date" name="date" placeholder="When did you go?" class="form-control" value="<%= @current_time %>">
+         <!--    <input type="text" id="date" name="date" placeholder="When did you go?" class="form-control" value="<%= @current_time %>"> -->
 
-            <!--   <div class='input-group date' id='datetimepicker1'>
-              <input type='text' class="form-control" name="date" id="date">
+              <div class='input-group date' id='datetimepicker1'>
+              <input type='text' class="form-control" name="date" id="date" value="<%= @current_time %>">
                 <span class="input-group-addon">
                   <span class="glyphicon glyphicon-calendar"></span>
                 </span>
-              </div> -->
+              </div>
 
             </div>
           </div>
