--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,10 +1,10 @@
 <!-- Responsive panel example-->
 <hr>
 <div class="row">
-  <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
+  <div class="col-md-8">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title"><%= @restaurant.venue_name %></h3>
+        <h3 class="panel-title text-center"><%= @restaurant.venue_name %></h3>
       </div>
       <div class="panel-body">
         <div class="row">
@@ -21,8 +21,8 @@
             </dl>
 
             <%if @restaurant.address == "Unavailable" %>
-              <hr>
-              <% else %>
+            <hr>
+            <% else %>
             <div id="map-canvas"></div>
             <% end %>
 
@@ -34,19 +34,45 @@
               <a href="/restaurants/<%= @restaurant.id %>/edit" class="btn btn-warning">
                 <i class="fa fa-edit"></i>
               </a>
-              </a>
-            </div>
+            </a>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+</div>
+
+<div class="col-md-4">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Some Favorites</h3>
+    </div>
+    <div class="panel-body">
+
+      <% @restaurant.experiences.each do |item| %>
+      <dd> <%= item.best %> </dd>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Average Rating (<%= @restaurant.experiences.count %> ratings)</h3>
+    </div>
+    <div class="panel-body">
+      <% ratings = @restaurant.experiences.pluck(:rating) %>
+      <h2 class="text-center"><%= (ratings.sum.to_f)/(ratings.count) %></h2>
+    </div>
+  </div>
+</div>
+</div>
+
 
 
 </div>
 
-<%= @results %>
+
 
 
 <!-- End responsive panel example -->
