--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -39,6 +39,8 @@
 
               <hr>
 
+              <img src="<%= @experience.image %>" class="img-responsive">
+
             </dl>
             <div class="btn-group btn-group-justified">
               <a href="/experiences" class="btn btn-primary">
