--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -96,7 +96,12 @@
             </div>
           </div>
 
+          <div class="form-group">
+          <div class="col-md-offset-2 col-md-6">
             <input type="file" id="image" name="image" class="form-control">
+            </div>
+            </div>
+
 
           <!-- Label and input for user_id -->
 
