made photos and add restaurant form better

--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -20,39 +20,54 @@
   <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Add Experience</h3>
+        <h3 class="panel-title text-center">Add an Experience<h5 class="text-center">include as much or as little as you want</h5></h3>
       </div>
+
       <div class="panel-body">
-      <hr>
-       <form action="/create_restaurant" method="post" class="form-horizontal">
+        <hr>
+      <!-- Add restaurant option -->
+        <form action="/create_restaurant" method="post" class="form-horizontal">
          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
          <div class="form-group">
 
-          <div class="col-sm-offset-2 col-sm-8">
-            <input type="text" id="venue_name" name="venue_name" placeholder="New Restaurant" class="form-control">
-            <% if Restaurant.count == 0 %>
-            <%= select_tag :state, options_for_select(@us_states) %>
+          <div class="col-sm-offset-2 col-md-8">
+
+            <div class="row">
+              <div class="col-md-3">
+                <div class="input-group">
+                  State:
+                  <% if Restaurant.count == 0 %>
+                  <%= select_tag :state, options_for_select(@us_states,"IL") %>
 
 
-            <% else %>
-            <%= select_tag :state, options_for_select(@us_states,Restaurant.last.state) %>
+                  <% else %>
+
+                  <%= select_tag :state, options_for_select(@us_states,Restaurant.last.state) %>
 
 
-            <% end %>
+                  <% end %>
+
+                </div><!-- /input-group -->
+              </div>
+              <div class="col-md-9">
+                <div class="input-group">
+                  <input type="text" id="venue_name" name="venue_name" class="form-control" placeholder="New restaurant">
+                  <span class="input-group-btn">
+                    <button class="btn btn-success" type="submit">Add</button>
+                  </span>
+                </div><!-- /input-group -->
+              </div><!-- /.col-lg-6 -->
+            </div><!-- /.row -->
+
+
+
           </div>
-
-
-
-
-          <div class="form-group">
-              <button class="btn btn-success">
-                Add
-              </button>
-          </div>
-
         </div>
       </form>
-      <form action="/create_experience" method="post" class="form-horizontal">
+
+
+      <form action="/create_experience" method="post" class="form-horizontal" enctype="multipart/form-data">
         <!-- Hidden input for authenticity token to protect from forgery -->
         <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
@@ -115,67 +130,73 @@
           </div>
         </div>
 
-          <!-- for date time picker -->
-          <script type="text/javascript">
-            $(function () {
-              $('#datetimepicker').datetimepicker({
-                format:'MM-DD-YYYY'
-              });
+        <!-- for date time picker -->
+        <script type="text/javascript">
+          $(function () {
+            $('#datetimepicker').datetimepicker({
+              format:'MM-DD-YYYY'
             });
-          </script>
+          });
+        </script>
 
-          <!-- Label and input for rating -->
-          <div class="form-group">
-            <label for="rating" class="col-sm-2 control-label">
-              Rating
-            </label>
-
-
-            <div class="col-sm-8">
-              <% (1..10).each do |number| %>
-              <% if number == 5 %>
-              <label class="radio-inline"><input type="radio" name="rating" value="<%= number %>" checked > <%= number %> </label>
-              <% else %>
-              <label class="radio-inline"><input type="radio" name="rating" value="<%= number %>"  > <%= number %> </label>
-              <% end %>
-              <% end %>
+        <!-- Label and input for rating -->
+        <div class="form-group">
+          <label for="rating" class="col-sm-2 control-label">
+            Rating
+          </label>
 
 
+          <div class="col-sm-8">
+            <% (1..10).each do |number| %>
+            <% if number == 5 %>
+            <label class="radio-inline"><input type="radio" name="rating" value="<%= number %>" checked > <%= number %> </label>
+            <% else %>
+            <label class="radio-inline"><input type="radio" name="rating" value="<%= number %>"  > <%= number %> </label>
+            <% end %>
+            <% end %>
 
-            </div>
+
 
           </div>
 
-          <!-- Label and input for comments -->
-          <div class="form-group">
-            <label for="comments" class="col-sm-2 control-label">
-              Comments
-            </label>
-            <div class="col-sm-10">
-              <textarea id="comments" name="comments" placeholder="Comments" class="form-control" rows="3"><%= @experience.comments %></textarea>
-            </div>
+        </div>
+
+        <!-- Label and input for comments -->
+        <div class="form-group">
+          <label for="comments" class="col-sm-2 control-label">
+            Comments
+          </label>
+          <div class="col-sm-10">
+            <textarea id="comments" name="comments" placeholder="Comments" class="form-control" rows="3"><%= @experience.comments %></textarea>
           </div>
+        </div>
 
-          <!-- Label and input for user_id -->
-          <div class="form-group">
-            <div class="col-sm-10">
-              <input name="user_id" type="hidden" value="<%= current_user.id %>">
-            </div>
+        <div class="form-group">
+          <label for="image" class="col-sm-2 control-label">
+            Add a picture
+          </label>
+          <div class="col-md-6">
+            <input type="file" id="image" name="image" class="form-control">
           </div>
+        </div>
 
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-              <button class="btn btn-success">
-                Create Experience
-              </button>
-              or
-              <a href="/experiences">Cancel</a>
-            </div>
+        <!-- Label and input for user_id -->
+        <div class="form-group">
+          <div class="col-sm-10">
+            <input name="user_id" type="hidden" value="<%= current_user.id %>">
           </div>
-        </form>
+        </div>
 
-
-
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-success">
+              Create Experience
+            </button>
+            or
+            <a href="/experiences">Cancel</a>
+          </div>
+        </div>
+      </form>
 
 
       </div>
