--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -97,7 +97,10 @@
           </div>
 
           <div class="form-group">
-          <div class="col-md-offset-2 col-md-6">
+          <label for="image" class="col-sm-2 control-label">
+            Add a picture
+            </label>
+          <div class="col-md-6">
             <input type="file" id="image" name="image" class="form-control">
             </div>
             </div>
