--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,5 +1,7 @@
 <!-- Responsive panel example-->
 <hr>
+
+<%= @parsed_data_coord %>
 <div class="row">
   <div class="col-md-8">
     <div class="panel panel-default">
@@ -17,7 +19,6 @@
               <dd><%= @restaurant.address %> </dd>
               <dd><%= @restaurant.city %> <%= @restaurant.state %></dd>
 
-
             </dl>
 
             <%if @restaurant.address == "Unavailable" %>
@@ -26,16 +27,7 @@
             <div id="map-canvas"></div>
             <% end %>
 
-            <div class="btn-group btn-group-justified">
-              <a href="/restaurants" class="btn btn-primary">
-                <i class="fa fa-chevron-left"></i>
-              </a>
 
-              <a href="/restaurants/<%= @restaurant.id %>/edit" class="btn btn-warning">
-                <i class="fa fa-edit"></i>
-              </a>
-            </a>
-          </div>
         </div>
       </div>
     </div>
@@ -50,7 +42,7 @@
     </div>
     <div class="panel-body">
 
-      <% @restaurant.experiences.each do |item| %>
+      <% @restaurant.experiences.last(3).each do |item| %>
       <dd> <%= item.best %> </dd>
       <% end %>
     </div>
@@ -65,10 +57,26 @@
       <h2 class="text-center"><%= (ratings.sum.to_f)/(ratings.count) %></h2>
     </div>
   </div>
-</div>
+      <div class="btn-group btn-group-justified">
+              <a href="/restaurants" class="btn btn-primary" style="text-decoration:none;">
+                <i class="fa fa-chevron-left">Back to Restaurants</i>
+              </a>
+
+              <a href="/restaurants/<%= @restaurant.id %>/edit" class="btn btn-warning" style="text-decoration:none;">Edit Restaurant
+                <i class="fa fa-edit"></i>
+              </a>
+
+          </div>
+
 </div>
 
+</div>
 
+<div class="row">
+<div class="col-md-offset-2 col-md-6">
+
+
+</div>
 
 </div>
 
