--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,61 @@
 <div class="text-center"><h2>Edit <%= resource_name.to_s.humanize %></h2></div>
 <hr>
 
+<% @us_states =
+      [
+      ['AK', 'AK'],
+    ['AL', 'AL'],
+    ['AR', 'AR'],
+    ['AZ', 'AZ'],
+    ['CA', 'CA'],
+    ['CO', 'CO'],
+    ['CT', 'CT'],
+    ['DC', 'DC'],
+    ['DE', 'DE'],
+    ['FL', 'FL'],
+    ['GA', 'GA'],
+    ['HI', 'HI'],
+    ['IA', 'IA'],
+    ['ID', 'ID'],
+    ['IL', 'IL'],
+    ['IN', 'IN'],
+    ['KS', 'KS'],
+    ['KY', 'KY'],
+    ['LA', 'LA'],
+    ['MA', 'MA'],
+    ['MD', 'MD'],
+    ['ME', 'ME'],
+    ['MI', 'MI'],
+    ['MN', 'MN'],
+    ['MO', 'MO'],
+    ['MS', 'MS'],
+    ['MT', 'MT'],
+    ['NC', 'NC'],
+    ['ND', 'ND'],
+    ['NE', 'NE'],
+    ['NH', 'NH'],
+    ['NJ', 'NJ'],
+    ['NM', 'NM'],
+    ['NV', 'NV'],
+    ['NY', 'NY'],
+    ['OH', 'OH'],
+    ['OK', 'OK'],
+    ['OR', 'OR'],
+    ['PA', 'PA'],
+    ['RI', 'RI'],
+    ['SC', 'SC'],
+    ['SD', 'SD'],
+    ['TN', 'TN'],
+    ['TX', 'TX'],
+    ['UT', 'UT'],
+    ['VA', 'VA'],
+    ['VT', 'VT'],
+    ['WA', 'WA'],
+    ['WI', 'WI'],
+    ['WV', 'WV'],
+    ['WY', 'WY']
+      ] %>
+
 <div class="row">
 <div class="col-sm-offset-1 col-sm-10 col-md-offset-4 col-md-6">
 
@@ -15,6 +70,21 @@
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
+
+  <div class="field">
+  <%= f.label :username %><br />
+  <%= f.text_field :username %>
+  </div>
+
+    <div class="row">&nbsp;</div>
+
+  <div class="field">
+    <%= f.label :preferred_state %>
+    &nbsp;
+    <%= f.select :state, options_for_select(@us_states, current_user.state) %>
+  </div>
+
+  <div class="row">&nbsp;</div>
 
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
