--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -36,17 +36,9 @@
             <div class="row">
               <div class="col-md-3">
                 <div class="input-group">
-                  State:
-                  <% if Restaurant.count == 0 %>
-                  <%= select_tag :state, options_for_select(@us_states,"IL") %>
+                  State:&nbsp;
 
-
-                  <% else %>
-
-                  <%= select_tag :state, options_for_select(@us_states,Restaurant.last.state) %>
-
-
-                  <% end %>
+                  <%= select_tag :state, options_for_select(@us_states,current_user.state) %>
 
                 </div><!-- /input-group -->
               </div>
