made and added logo to signup and sign in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,26 @@
     body {
       padding-top: 60px;
     }
+
+
+    .header img {
+  float: left;
+  width: 175px;
+  height: 127px;
+  background: #555;
+}
+
+.header h1 {
+  position: relative;
+  top: 30px;
+  left: 10px;
+}
+
+
+  .img-responsive {
+    margin: 0 auto;
+  }
+
   </style>
 
 
@@ -55,6 +75,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 </head>
 <body>
+
+
 
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
