--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,17 @@
+<br>
 <div class="text-center"><h2>Sign up</h2></div>
 
 <hr>
 
 <div class="row">
-  <div class="col-sm-offset-1 col-sm-10 col-md-offset-4 col-md-6">
+  <div class="col-sm-4">
+    <div class="header">
+      <img src=<%= image_path('food2.jpg') %> class="img-responsive" alt="logo">
+      <h1>Eated<div><h4>your eating journey</h4></div></h1>
+
+    </div>
+  </div>
+  <div class="col-sm-10 col-md-offset-1 col-md-6">
 
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -64,7 +72,8 @@
     ['WY', 'WY']
       ] %>
 
-
+<br>
+<br>
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
