--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,7 +1,7 @@
 <!-- Responsive panel example-->
 <hr>
 <div class="row">
-  <div class="col-md-offset-1 col-md-6">
+  <div class="col-sm-offset-1 col-md-6">
     <div class="panel panel-default">
       <div class="panel-heading">
 
