--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,10 +96,13 @@
         <ul class="nav navbar-nav">
           <% @experiences = Experience.all %>
           <% if current_user != nil %>
-          <li><a href="/experiences" style="text-decoration:none;">Experiences  <span class="badge"><%= @experiences.where(:user_id => current_user.id).count %></span></a></li>
+          <li><a href="/experiences" style="text-decoration:none;">Experiences  <span class="badge"><%= current_user.experiences.count %></span></a></li>
+          <li><a href="/follows" style="text-decoration:none;">Following <span class="badge"><%= current_user.friends_where_sender.count %></span></a></li>
           <% else %>
           <li><a href="/experiences" style="text-decoration:none;">Experiences</a></li>
+          <li><a href="/follows" style="text-decoration:none;">Following</a></li>
           <% end %>
+
 
           <li><a href="/restaurants" style="text-decoration:none;">Restaurants</a></li>
 
