--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,61 +17,6 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <% @us_states =
-      [
-      ['AK', 'AK'],
-    ['AL', 'AL'],
-    ['AR', 'AR'],
-    ['AZ', 'AZ'],
-    ['CA', 'CA'],
-    ['CO', 'CO'],
-    ['CT', 'CT'],
-    ['DC', 'DC'],
-    ['DE', 'DE'],
-    ['FL', 'FL'],
-    ['GA', 'GA'],
-    ['HI', 'HI'],
-    ['IA', 'IA'],
-    ['ID', 'ID'],
-    ['IL', 'IL'],
-    ['IN', 'IN'],
-    ['KS', 'KS'],
-    ['KY', 'KY'],
-    ['LA', 'LA'],
-    ['MA', 'MA'],
-    ['MD', 'MD'],
-    ['ME', 'ME'],
-    ['MI', 'MI'],
-    ['MN', 'MN'],
-    ['MO', 'MO'],
-    ['MS', 'MS'],
-    ['MT', 'MT'],
-    ['NC', 'NC'],
-    ['ND', 'ND'],
-    ['NE', 'NE'],
-    ['NH', 'NH'],
-    ['NJ', 'NJ'],
-    ['NM', 'NM'],
-    ['NV', 'NV'],
-    ['NY', 'NY'],
-    ['OH', 'OH'],
-    ['OK', 'OK'],
-    ['OR', 'OR'],
-    ['PA', 'PA'],
-    ['RI', 'RI'],
-    ['SC', 'SC'],
-    ['SD', 'SD'],
-    ['TN', 'TN'],
-    ['TX', 'TX'],
-    ['UT', 'UT'],
-    ['VA', 'VA'],
-    ['VT', 'VT'],
-    ['WA', 'WA'],
-    ['WI', 'WI'],
-    ['WV', 'WV'],
-    ['WY', 'WY']
-      ] %>
-
 <br>
 <br>
   <div class="field">
@@ -90,7 +35,7 @@
   <div class="field">
     <%= f.label :preferred_state %>
     &nbsp;
-    <%= f.select :state, options_for_select(@us_states) %>
+    <%= f.select :state, options_for_select(Eated::Application.us_states) %>
   </div>
 
   <div class="row">&nbsp;</div>
